fixed heatmap setup, no longer inverts though :sad:, also some punctuation changes in steam_algorithms

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -24,11 +24,14 @@ figcaption {
   text-align: center;
 }
 
+.heatmap {
 
-
-.dark .dm-safe-img {
-    filter: invert(1);
     image-rendering: pixelated;
     image-rendering: -moz-crisp-edges;
     image-rendering: crisp-edges;
+
+}
+
+.dark .dm-safe-img {
+    filter: invert(1);
 }
