first post in years!!!

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -35,3 +35,17 @@ figcaption {
 .dark .dm-safe-img {
     filter: invert(1);
 }
+
+.goat {
+    max-width: 50%;
+    text-align: center;
+    margin: auto;
+}
+
+th {
+    padding-right: 0.5rem;
+}
+
+table {
+    margin: auto;
+}
