--- a/themes/awoobis/layouts/_default/list.html
+++ b/themes/awoobis/layouts/_default/list.html
@@ -2,7 +2,7 @@
 <h1>{{ .Title }}</h1>
 <section>
     <div class="articles h-feed">
-        {{ range (.Paginate .pages.bypublishdate.reverse).pages }}
+        {{ range (.Paginate .Pages.ByPublishDate.Reverse).Pages }}
         {{ partial "post-summary.html" . }}
         {{ end }}
     </div>
