--- a/themes/awoobis/assets/css/main.css
+++ b/themes/awoobis/assets/css/main.css
@@ -21,7 +21,7 @@
 
 /* Basic */
 html {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: "Montserrat", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     /* 1 */
     -ms-text-size-adjust: 100%;
     /* 2 */
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-    font-size: 18px;
+    font-size: 16pt;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     color: var(--font-color);
@@ -58,9 +58,12 @@ nav,
 section {
     display: block;
 }
+main {
+    margin: 0 auto;
+    padding: 0 auto;
+}
 
 .container {
-    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -92,7 +95,7 @@ h3 {
 a {
     color: var(--link-color);
     text-decoration: none;
-    border-bottom: 1px solid transparent;
+    /*border-bottom: 1px solid transparent;*/
     transition-duration: 0.4s;
 }
 
@@ -100,7 +103,8 @@ a:hover,
 a:focus,
 a:active {
     color: var(--link-state-color);
-    border-bottom: 1px solid var(--link-state-border-color);
+    transform: scale(1.15);
+    /*border-bottom: 1px solid var(--link-state-border-color);*/
 }
 /*a:visited {*/
     /*color: var(--link-visited-color);*/
@@ -234,26 +238,44 @@ header h2 {
 
 .site-title {
     white-space: nowrap;
+    font-weight: 700;
 }
 
 header nav:not(:empty){
-    background: var(--nav-bg-color);
     margin-top: 1em;
     max-width: 100%;
     text-align: center;
-    padding: 0.5em 0;
 }
 
 header nav a {
     display: inline-block;
     margin: 0 2.5%;
+    padding: 0.75em;
+    border-radius: 10px;
+    background: var(--mantle);
+    border-top: 2px solid var(--surface0);
+    border-left: 1px solid var(--surface0);
+    box-shadow: 10px 10px 15px var(--crust);
+}
+header nav a:nth-child(3n-2) {
+    transform: rotate(-3deg) translate(-0.15em, -0.2em);
+}
+header nav a:nth-child(3n-1) {
+    transform: rotate(0.5deg) translate(0em, -0.2em);
+}
+header nav a:nth-child(3n) {
+    transform: rotate(3.5deg) translate(-0.1em, 0em);
+}
+header nav a:hover {
+    transform: scale(1.15);
 }
 
 /* Social icons */
 
 .social-icon:hover > span > svg {
-    transform: scale(1.15);
-    transition-duration: 0.1s;
+    transform: scale(1.25);
+    transition-duration: 0.2s;
+    box-shadow: 10px 10px 10px var(--crust);
 }
 
 .social-icons {
@@ -366,10 +388,30 @@ main h1 {
     margin-left: 0.2em;
 }
 
-article:not(:last-of-type) {
-    border-bottom: thin solid var(--hr-color);
-    padding-bottom: 2em;
+article {
+    background: var(--mantle);
+    padding: 1.5rem;
+    margin: 2rem;
+    border-top: 2px solid var(--surface0);
+    border-left: 1px solid var(--surface0);
+    border-radius: 10px;
+    box-shadow: 10px 10px 15px var(--crust);
+    color: var(--text);
+    transition-duration: 0.5s;
 }
+article:nth-child(3n-1) {
+    transform: rotate(-2deg) translate(1.15em, -0.3em);
+}
+article:nth-child(3n-2) {
+    transform: rotate(0.7deg) translate(-0.2em, -0.5em);
+}
+article:nth-child(3n) {
+    transform: rotate(3deg) translate(-1em, -0.3em);
+}
+article:hover {
+    transform: scale(1.05);
+}
+
 
 article header h1 {
     font-size: 1.35em;
@@ -377,6 +419,7 @@ article header h1 {
     margin-bottom: 0.5em;
     font-weight: 600;
     display: inline;
+    color: var(--text);
 }
 
 article header h1 a {
@@ -384,6 +427,14 @@ article header h1 a {
     border: none;
     text-decoration: none;
 }
+a.post {
+    color: var(--font-color);
+}
+
+a.post:hover {
+    color: var(--lavender);
+}
+
 
 .post h1,
 .post h2,
@@ -625,7 +676,7 @@ code.has-jax {
     width: 100%;
     align-items: center;
     margin: auto;
-    height: 50vh;
+    padding-top: 3vw;
 }
 
 div.card {
@@ -637,8 +688,8 @@ div.card {
 div.card-icons{
     flex: 3 1 30%;
     position: relative;
-    top: 13vh;
-    right: 10%;
+    top: 10vw;
+    right: 10%;;
 }
 
 svg.card-icon{
@@ -647,34 +698,56 @@ svg.card-icon{
 
 div.card > h3 {
     text-align: center;
+    font-size: 13pt;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
 a.card {
     text-align: center;
     margin: auto;
-    height: 40vh;
+    width: 25vw;
+    max-width: 300px;
     background-color: var(--mantle);
     box-shadow: 10px 10px 15px var(--crust);
     color: var(--text);
     aspect-ratio: 5/7;
-    border: 2px solid var(--surface0);
-    border-radius: 8px;
+    border-top: 2px solid var(--surface0);
+    border-left: 1px solid var(--surface0);
+    border-radius: 10px;
     transition-duration: .5s;
+}
+a.card svg {
+    transition-duration: .5s;
+}
+a.card h3 {
+    transition-duration: .5s;
+    font-weight: 600;
 }
 
 a.card:nth-child(1) {
-    transform: rotate(-5deg) translate(5px, -2px);
+    transform: rotate(-5deg) translate(5px, -5px);
 }
 a.card:nth-child(2) {
-    transform: rotate(-1deg) translate(5px, 5px);
+    transform: rotate(-1deg) translate(5px, -7px);
 }
 a.card:nth-child(3) {
-    transform: rotate(6deg) translate(5px, 3px);
+    transform: rotate(6deg) translate(5px, -3px);
 }
 
 a.card:hover {
     transform: scale(1.15);
+    border-top: 2px solid var(--surface1);
+    border-left: 1px solid var(--surface1);
+}
+
+a.card:hover svg {
+    stroke: var(--lavender);
+}
+a.card:hover h3 {
+    color: var(--lavender);
 }
 
 .pagination-item {
@@ -809,6 +882,9 @@ div.pfp {
     width: 30vh;
     border-radius: 50%;
     background-size: 30vh;
+    border-top: 2px solid var(--surface0);
+    border-left: 1px solid var(--surface0);
+    box-shadow: 10px 10px 15px var(--crust);
     transition-duration: 1s;
     transition: all 1s;
 }
@@ -816,6 +892,9 @@ div.pfp {
     background-image: url("/media/git_avatar.png");
     z-index: 0;
     opacity: 1;
+    border-top: 2px solid var(--surface0);
+    border-left: 1px solid var(--surface0);
+    box-shadow: 10px 10px 15px var(--crust);
 }
 #pfp-container div.pfp-top {
     z-index: -1;
@@ -830,12 +909,25 @@ div.pfp {
 
 
 .homepage-content {
-    text-align: center
+    text-align: center;
+    background: var(--mantle);
+    padding: 20px;
+    border-radius: 10px;
+    border-top: 2px solid var(--surface0);
+    border-left: 1px solid var(--surface0);
+    box-shadow: 10px 10px 15px var(--crust);
 }
+.homepage-content > p:not(:last-child) {
+    margin-bottom: 30px;
+}
+
 
 /* Media Queries */
 
-@media (max-width: 840px) {
+@media (max-width: 940px) {
+    body {
+        font-size: 12pt;
+    }
     .main-wrapper {
         margin: 0;
         max-width: none;
