--- a/themes/awoobis/layouts/partials/post-summary.html
+++ b/themes/awoobis/layouts/partials/post-summary.html
@@ -1,21 +1,26 @@
-<article class="post-list h-feed">
-    <div class="post-header">
-        <header>
-            <h2 class="p-name post-title{{ if .Params.favorite }} favorite{{end}}{{ if .Params.draft }} draft{{end}}"><a class="u-url" href="{{ .RelPermalink }}">{{ trim .Title " " }}</a></h2>
-        </header>
-        {{ partial "post-language-switcher.html" . }}
-    </div>
+<a href="{{ .RelPermalink }}" class="post">
+    <article class="post-list h-feed">
+        <div class="post-header">
+            <header>
+                <h2
+                    class="p-name post-title{{ if .Params.favorite }} favorite{{end}}{{ if .Params.draft }} draft{{end}}">
+                    {{ trim .Title " " }}
+                </h2>
+            </header>
+            {{ partial "post-language-switcher.html" . }}
+        </div>
 
-    {{ if not .Site.Params.disableSummary }}
+        {{ if not .Site.Params.disableSummary }}
         <div class="content post-summary p-summary">
             {{ .Summary | safeHTML }}
         </div>
-    {{ end }}
-    {{ if and (.Truncated) (.Site.Params.readMore) }}
+        {{ end }}
+        {{ if and (.Truncated) (.Site.Params.readMore) }}
         <div class="read-more">
             <a class="u-url" href="{{ .RelPermalink }}">{{ i18n "readMore" }}</a>
         </div>
-    {{ end }}
-    
-    {{ partial "post-info.html" . }}
-</article>
+        {{ end }}
+
+        {{ partial "post-info.html" . }}
+    </article>
+</a>
