--- a/themes/awoobis/assets/css/main.css
+++ b/themes/awoobis/assets/css/main.css
@@ -389,7 +389,11 @@ main h1 {
     display: inline-block;
     margin-left: 0.2em;
 }
-
+div.h-feed {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
 article {
     background: var(--mantle);
     padding: 1.5rem;
@@ -401,6 +405,12 @@ article {
     color: var(--text);
     transition-duration: 0.5s;
 }
+article.h-feed {
+    /*aspect-ratio: 7/5;*/
+    width: 50vw;
+    margin: auto 0;
+}
+
 article.h-feed:nth-child(3n-1) {
     transform: rotate(-1deg) translate(1.15em, -0.3em);
 }
@@ -683,15 +693,15 @@ code.has-jax {
 
 div.card {
     position: relative;
-    display: flex;
     flex-direction: column;
     height: 100%;
 }
 div.card-icons{
-    flex: 3 1 30%;
+    height: 80%;
+    width: 100%;
     position: relative;
-    top: 10vw;
-    right: 10%;;
+    top: 30%;
+    right: 10%;
 }
 
 svg.card-icon{
@@ -935,6 +945,10 @@ div.pfp {
     article.h-entry {
         margin: 0;
     }
+    article.h-feed {
+        padding: 1.5rem;
+        margin: 2rem;
+    }
     .container{
         margin: 0;
         padding: 0;
@@ -953,10 +967,10 @@ div.pfp {
         word-wrap: break-word;
     }
     a.card h3{
-        font-size: 8pt;
+        font-size: 2.0vw;
     }
-    div.card-icons{
-        top: 7vw;
+    div.project.card{
+        position: relative;
     }
 
     .pagination-item {
