--- a/themes/awoobis/layouts/_default/single.html
+++ b/themes/awoobis/layouts/_default/single.html
@@ -7,6 +7,12 @@
 </nav>
 {{ end }}
 
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+{{ if .Params.focus }}
+    {{ $js := resources.Get "js/focus.js" | js.Build }}
+    <script src="{{ $js.RelPermalink }}" ></script>
+{{ end }}
 <article class="post h-entry">
     <div class="post-header">
         <header>
