mobile-safed the hugo post

--- a/themes/awoobis/assets/css/main.css
+++ b/themes/awoobis/assets/css/main.css
@@ -1022,6 +1022,9 @@ input[type=text] {
         padding-left: 25px;
         padding-right: 25px;
     }
+    .focus {
+        white-space: normal;
+    }
 
     .container {
         max-width: 100%;
