--- a/themes/awoobis/layouts/partials/pfp.html
+++ b/themes/awoobis/layouts/partials/pfp.html
@@ -1,7 +1,14 @@
+{{ partial "resource.html" (dict "context" . "type" "js" "filename" "js/title.js") }}
 <div class="pfp">
     <div id="pfp-container">
         <div id="git-pfp" class="pfp-top"></div>
         <div id="irl-pfp" class="pfp-bottom"></div>
     </div>
-    <h2 class="pfp">{{ .Site.Params.author }}</h2>
+    <h1 style="display:none">{{ .Site.Params.Author }}</h1>
+    <!--SEO superstition-->
+    <div id="name-container" data-text="{{ .Site.Params.Author }}">
+    {{ range (apply (split .Site.Params.Author "") "replace" "." " " "&nbsp;&nbsp;") }}
+        <h1 class="my-name">{{ . | safeHTML }}</h1>
+    {{ end }}
+    </div>
 </div>
