--- a/themes/awoobis/layouts/partials/hero.html
+++ b/themes/awoobis/layouts/partials/hero.html
@@ -1,4 +1,4 @@
-{{ partial "resource.html" (dict "context" . "type" "js" "filename" "js/hero.js") }}
+<script src="js/hero.js" type="module"></script>
 <script src="https://d3js.org/d3.v6.js"></script>
 <div class="figure-container hero">
 
