--- a/themes/awoobis/layouts/partials/resource.html
+++ b/themes/awoobis/layouts/partials/resource.html
@@ -17,13 +17,13 @@
     {{ if eq .type "css" }}
         <link rel="stylesheet" href="{{ $resource.Permalink }}" integrity="{{ $resource.Data.Integrity }}">
     {{ else if eq .type "js" }}
-        <script src="{{ $resource.Permalink }}" type="text/javascript" charset="utf-8" integrity="{{ $resource.Data.Integrity }}"></script>
+        <script src="{{ $resource.Permalink }}" type="module" charset="utf-8" integrity="{{ $resource.Data.Integrity }}"></script>
     {{ end }}
 <!-- For backward compatibility -->
 {{ else }}
     {{ if eq .type "css" }}
         <link rel="stylesheet" href="{{ .filename | absURL }}?rnd={{ now.Unix }}">
     {{ else if eq .type "js" }}
-        <script src="{{ .filename | absURL }}?rnd={{ now.Unix }}" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ .filename | absURL }}?rnd={{ now.Unix }}" type="module" charset="utf-8"></script>
     {{ end }}
 {{ end }}
