--- a/themes/awoobis/layouts/partials/hero.html
+++ b/themes/awoobis/layouts/partials/hero.html
@@ -2,10 +2,10 @@
 <script src="https://d3js.org/d3.v6.js"></script>
 <div class="figure-container hero">
 
-    <h2 class="hero"> Featured Module: Beans</h2>
+    <h2 class="hero"> Featured Module: Coffee Makes the World Go Round</h2>
     <div id="featured-dataviz">
     </div>
-    <!--<p class="hero commentary homepage-content card">-->
-    <!--Coffee Beans orbiting a globe-->
-    <!--</p>-->
+    <p class="hero commentary homepage-content card">
+    A short demo showing how a dataset (in this case randomly generated) can be used to control arbitrary animation behavior. Here we randomly assign each bean a position, orbital plane, and orbital speed. Each time-step, we calculate the bean's new position on the plane. I found that due to natural non-linearities in polar coordinates, certain angles wouldn't be covered by a random normalized angle vector. By randomly choosing beans and crossing their orbital plane with the y axis, we can create the illusion of a more uniform global bean distribution.
+    </p>
 <div>
