--- a/themes/awoobis/assets/css/main.css
+++ b/themes/awoobis/assets/css/main.css
@@ -42,8 +42,13 @@ body {
     color: var(--font-color);
     background: var(--bg-color);
     max-width: 1200px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     margin: auto;
     padding: 2rem;
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 
 em {
@@ -347,6 +352,47 @@ header nav a:hover {
     margin-bottom: 0;
     padding: 0;
     list-style-type: none;
+}
+
+.resume-links {
+  flex-direction: column;
+  justify-content: center;
+  width: max-content;
+  position: absolute;
+  display: flex;
+  opacity: 0;
+  transition-duration: 0.5s;
+  text-align: end;
+  transform: translate(10em, 0);
+}
+.resume-icon {
+  word-wrap: break-word;
+  align-items: center;
+  transition-duration: 0.2s;
+  transform: translate(-0em, 0);
+  padding: 0.75em;
+}
+.resume-container {
+  display: inline-block;
+}
+.resume-container:hover .resume-links {
+  display: flex;
+  opacity: 1;
+}
+.resume-container:hover .resume-icon:nth-child(1) {
+  transform: translate(-15em, .25em) rotate(0deg);
+}
+.resume-container:hover .resume-icon:nth-child(2) {
+  transform: translate(-14.75em, .5em) rotate(-3deg);
+}
+.resume-container:hover .resume-icon:nth-child(3) {
+  transform: translate(-14.50em, .75em) rotate(-6deg);
+}
+.resume-container:hover .resume-icon:nth-child(4) {
+  transform: translate(-14.25em, 1.0em) rotate(-9deg);
+}
+.resume-icon:hover {
+  color: var(--rosewater);
 }
 
 .social-icons li {
