--- a/themes/awoobis/assets/css/main.css
+++ b/themes/awoobis/assets/css/main.css
@@ -277,6 +277,7 @@ hr {
 
 .common-header {
     padding-bottom: 1.5em;
+    margin-bottom: 5rem;
 }
 
 header a {
@@ -1137,7 +1138,7 @@ input[type=text] {
 
 /* Media Queries */
 
-@media (max-width: 940px) {
+@media (max-width: 1350px) {
     body {
         font-size: 12pt;
         padding: 0;
@@ -1266,7 +1267,7 @@ input[type=text] {
 
 @media (max-width: 500px) {
     .hero-container{
-        display: none;
+        /*display: none;*/
     }
 }
 
