added credit for globe

--- a/themes/awoobis/layouts/partials/hero.html
+++ b/themes/awoobis/layouts/partials/hero.html
@@ -19,5 +19,6 @@
     Oracle Cloud is shown in <span style="color: #ff00ff">Purple</span>.
     Tencent Cloud is shown in <span style="color: #00bbff">Light Blue</span>.
     Locations are not exact, and a small jitter is applied to prevent overlaps.
+    Globe by <a href="https://www.cgtrader.com/denysalmaral/">Denys Almaral</a>.
     </p>
 <div>
