added mathjax support

--- a/themes/awoobis/layouts/partials/head.html
+++ b/themes/awoobis/layouts/partials/head.html
@@ -29,6 +29,10 @@
 <meta name="robots" content="noindex" />
 {{ end }}
 
+{{ if (eq .Params.math true) }}
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+{{ end }}
+
 {{ with .OutputFormats.Get "rss" -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 {{ end -}}
