--- a/themes/awoobis/layouts/partials/head.html
+++ b/themes/awoobis/layouts/partials/head.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-<script src="https://releases.jquery.com/git/jquery-3.x-git.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.151.3/build/three.min.js"></script>
 
 {{ partial "title.html" . }}
