--- a/themes/awoobis/layouts/index.html
+++ b/themes/awoobis/layouts/index.html
@@ -9,10 +9,10 @@
     </div>
 </div>
 
-<hr class="hero-container">
-<section class="hero-container">
-        {{partial "hero.html" . }}
-</section>
+<!--<hr class="hero-container">-->
+<!--<section class="hero-container">-->
+        <!--{{partial "hero.html" . }}-->
+<!--</section>-->
 
 <h1> Ongoing Projects </h1>
 <hr>
